--- a/guides/core-workflows/using-assertions-and-matchers.mdx
+++ b/guides/core-workflows/using-assertions-and-matchers.mdx
@@ -1,275 +1,245 @@
 ---
-title: "Using Assertions and Matchers Effectively"
-description: "Explores the wide variety of assertions and matchers provided by GoogleTest and GoogleMock, including customizing matchers for your own types. This guide also demonstrates combining matchers, best practices for clarity, and how matchers improve test diagnostics."
+title: "Using Assertions and Matchers"
+description: "Explore the full range of assertions and matchers provided in GoogleTest and GoogleMock. Learn how to express test intent clearly, and choose the right assertion for each verification scenario."
 ---
 
-# Using Assertions and Matchers Effectively
+# Using Assertions and Matchers
 
-Explore the wide variety of assertions and matchers provided by GoogleTest and GoogleMock, including how to customize matchers for your own types. This guide also demonstrates combining matchers, offers best practices for clarity, and shows how matchers improve test diagnostics.
-
----
-
-## 1. Introduction
-
-In C++ unit testing with GoogleTest and mocking with GoogleMock, assertions and matchers are fundamental tools to verify program behavior. This page helps you understand how to use the rich set of built-in assertions and matchers effectively, how to combine them to express complex expectations clearly, and how to write custom matchers for your specialized types.
-
-Using assertions and matchers correctly saves you debugging time, clarifies test intentions, and makes failure diagnostics immediately actionable.
+Explore the full range of assertions and matchers provided in GoogleTest and GoogleMock. Learn how to express test intent clearly and choose the right assertion for each verification scenario.
 
 ---
 
-## 2. Understanding Assertions
+## 1. Overview of Assertions and Matchers
 
-Assertions verify conditions in your tests and report failures when expectations are violated. GoogleTest offers various assertion macros tailored for typical testing scenarios.
+Assertions and matchers are the cornerstone for verifying conditions and validating behavior in tests using GoogleTest and GoogleMock. 
 
-### Types of Assertions
+- **Assertions** decide whether a test succeeds or fails based on conditions.
+- **Matchers** describe the expected properties of values or arguments with expressive predicates.
 
-- **Fatal Assertions (`ASSERT_*`)**: Abort the current function immediately upon failure.
-- **Nonfatal Assertions (`EXPECT_*`)**: Report failure but let the current function continue.
-
-### Core Assertion Macros
-
-| Assertion        | Description                                                         | Typical Usage                           |
-|------------------|---------------------------------------------------------------------|---------------------------------------|
-| `EXPECT_TRUE(condition)`  | Verifies `condition` is true                                   | General boolean conditions             |
-| `EXPECT_FALSE(condition)` | Verifies `condition` is false                                  | Control flow checks                    |
-| `EXPECT_EQ(val1, val2)`   | Verifies `val1 == val2`                                       | Equality checks                       |
-| `EXPECT_NE(val1, val2)`   | Verifies `val1 != val2`                                       | Inequality checks                    |
-| `EXPECT_LT(val1, val2)`   | Verifies `val1 < val2`                                        | Ordering checks                      |
-| `EXPECT_LE(val1, val2)`   | Verifies `val1 <= val2`                                       | Ordering checks, inclusive           |
-| `EXPECT_GT(val1, val2)`   | Verifies `val1 > val2`                                        | Ordering checks                      |
-| `EXPECT_GE(val1, val2)`   | Verifies `val1 >= val2`                                       | Ordering checks, inclusive           |
-| `EXPECT_STREQ(str1, str2)`| Verifies `str1` and `str2` C strings have the same contents | C string equality                    |
-| `EXPECT_STRNE(str1, str2)`| Verifies `str1` and `str2` C strings differ                   | C string inequality                  |
-| `EXPECT_THROW(stmt, exception_type)` | Verifies `stmt` throws `exception_type`              | Exception testing                   |
-| `EXPECT_NO_THROW(stmt)`   | Verifies `stmt` does not throw                                | Exception testing                   |
-
-### Using `EXPECT_THAT` with Matchers
-
-`EXPECT_THAT(value, matcher)` uses matchers for expressive assertions. Matchers produce detailed diagnostics when a test fails.
-
-```cpp
-EXPECT_THAT(value, StartsWith("Hello"));
-EXPECT_THAT(collection, ElementsAre(1, 2, 3));
-EXPECT_THAT(number, AllOf(Gt(0), Lt(10)));
-```
-
-Matchers are introduced in detail in the next section.
+This guide focuses on helping you understand when and how to use the different assertions and matchers for clear, maintainable, and precise tests.
 
 ---
 
-## 3. Working with Matchers
+## 2. Prerequisites
 
-Matchers allow you to specify *what* you expect in a natural, readable way. Each matcher tests a value or a group of values and supports detailing *why* a match failed.
+Before using assertions and matchers effectively, ensure:
 
-### Built-in Matchers
-
-GoogleMock includes a rich library of matchers. Some commonly used ones:
-
-- `_`: Matches any value (wildcard matcher).
-- `Eq(value)`: Matches values equal to `value`.
-- `Ne(value)`: Matches values not equal to `value`.
-- `Lt(value)`, `Le(value)`, `Gt(value)`, `Ge(value)`: Value ordering matchers.
-- `StrEq(s)`, `StrNe(s)`: Matcher for string equality/inequality.
-- `Contains(substring)`: Checks substring inclusion.
-- `StartsWith(prefix)`, `EndsWith(suffix)`: String prefix/suffix match.
-- `ElementsAre(...)`, `UnorderedElementsAre(...)`: Matchers for container contents.
-- `Pointee(matcher)`: Matcher for the object pointed to by a pointer.
-
-### Combining Matchers
-
-Use combinators to express complex conditions:
-
-- `AllOf(m1, m2, ...)`: Matches if all matchers succeed.
-- `AnyOf(m1, m2, ...)`: Matches if any matcher succeeds.
-- `Not(m)`: Matches if matcher `m` fails.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock, Method(AllOf(Gt(5), Ne(10))));
-EXPECT_THAT(vec, AnyOf(ElementsAre(1, 2, 3), ElementsAre(4, 5)));
-```
-
-### Matching Multiple Arguments as a Whole
-
-Sometimes you want to match arguments not individually but as a group. Use the `.With()` clause or `EXPECT_THAT` with multi-argument matchers (matchers over tuples):
-
-```cpp
-EXPECT_CALL(mock, Func(_, _))
-    .With(Lt());  // The tuple of args matches Lt()
-```
-
-Use helper matchers like `Args<>` to specify selected arguments.
-
-### Using Matchers in Code
-
-Matchers are passed as arguments to `EXPECT_CALL()`, `ON_CALL()`, or `EXPECT_THAT()`. They must be *pure functions* with no side effects.
-
-### Tip: Sharing Matchers
-
-Because matchers are lightweight and copyable by pointer, you can assign complex matchers to variables and reuse them:
-
-```cpp
-Matcher<int> in_range = AllOf(Gt(5), Le(10));
-EXPECT_CALL(mock, Foo(in_range));
-EXPECT_CALL(mock, Bar(in_range));
-```
+- GoogleTest (`#include <gtest/gtest.h>`) and GoogleMock (`#include <gmock/gmock.h>`) are installed and correctly integrated.
+- You have defined your tests and optionally mocks if working with mock objects.
+- Basic familiarity with test setup, mock creation, and GoogleTest test flows.
 
 ---
 
-## 4. Customizing Matchers
+## 3. Key Assertions in GoogleTest
 
-Sometimes built-in matchers are not enough. Defining custom matchers unlocks more expressive power.
+GoogleTest provides a comprehensive set of assertion macros to verify boolean conditions, compare values, check strings, handle exceptions, and more.
 
-### Defining Simple Matchers
+### 3.1 Boolean Assertions
 
-Use the `MATCHER` macro when you want a matcher without parameters:
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)` — Verify a condition is true.
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)` — Verify a condition is false.
 
-```cpp
-MATCHER(IsEven, "checks if a number is even") {
-  return (arg % 2) == 0;
-}
+### 3.2 Value Comparison Assertions
 
-EXPECT_CALL(mock, Foo(IsEven()));
-```
+- `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)` — Check equality using `==`.
+- `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)` — Check inequality.
+- Ordering comparisons: `EXPECT_LT`, `EXPECT_LE`, `EXPECT_GT`, `EXPECT_GE` for `<`, `<=`, `>`, `>=`.
 
-### Defining Parameterized Matchers
+### 3.3 String Assertions
 
-Use `MATCHER_P` for one-parameter matchers, `MATCHER_P2` for two, and so on:
+Specialized macros for C strings:
+- `EXPECT_STREQ(str1, str2)` / `ASSERT_STREQ` — Compare C strings for equality.
+- Case-insensitive variants: `EXPECT_STRCASEEQ`, `EXPECT_STRCASENE`.
 
-```cpp
-MATCHER_P(IsDivisibleBy, divisor, "divided by divisor") {
-  return (arg % divisor) == 0;
-}
+### 3.4 Floating-Point Comparisons
 
-EXPECT_THAT(value, IsDivisibleBy(3));
-```
+For approximate equality:
+- `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ` — for `float` and `double` respecting floating-point precision.
+- `EXPECT_NEAR(val1, val2, abs_error)` — check difference within an absolute error.
 
-### Writing Class-Based Matchers
+### 3.5 Exception Assertions
 
-For complex logic, implement the matcher interface with methods for matching and description.
+Test code for throwing or not throwing exceptions:
+- `EXPECT_THROW(statement, exception_type)`
+- `EXPECT_ANY_THROW(statement)`
+- `EXPECT_NO_THROW(statement)`
 
-### Best Practices
+### 3.6 Predicate Assertions
 
-- Always provide a clear textual description in `DescribeTo` and `DescribeNegationTo`.
-- Stream additional diagnostics during matching to help understanding failures.
-- Keep matchers side-effect free.
+For complex predicates:
+- `EXPECT_PREDn(predicate, args...)` - Assert that predicate returns true for args.
+- `EXPECT_PRED_FORMATn(pred_formatter, args...)` - Provide custom formatted failures for predicates.
+
+### 3.7 Explicit Success or Failure
+
+- Use `SUCCEED()` to indicate an explicit success point.
+- Use `FAIL()` or `ADD_FAILURE()` for explicit failures within tests.
 
 ---
 
-## 5. Best Practices for Using Assertions and Matchers
+## 4. Using Matchers for Expressive Assertions
 
-- **Use matchers for clarity:** They make tests readable and failure messages informative.
-- **Prefer `EXPECT_THAT` for complex matching:** It integrates well with GoogleMock matchers.
-- **Use `_` as a wildcard when you don’t care about an argument’s value:** Keeps tests flexible and less brittle.
-- **Set expectations explicitly and concisely:** Over-specification leads to brittle tests.
-- **Avoid using `EXPECT_CALL` just to suppress warnings on uninteresting calls:** Use `ON_CALL` or `NiceMock` instead.
-- **When expecting ordered calls, use `InSequence` or `After` to express dependencies explicitly.**
-- **Write custom matchers when you need detailed control on argument validation and diagnostics.**
+Matchers allow you to write human-readable, flexible assertions about values and mock call arguments.
+
+### 4.1 Basic Matchers
+
+- `_` matcher matches anything.
+- `Eq(value)` checks for equality.
+- `Ne(value)`, `Lt(value)`, `Le(value)`, `Gt(value)`, `Ge(value)` for relational checks.
+
+### 4.2 Compound Matchers
+
+- `AllOf(m1, m2, ...)` — All matchers must match.
+- `AnyOf(m1, m2, ...)` — At least one matcher matches.
+- `Not(m)` — The matcher does not match.
+
+### 4.3 Container Matchers
+
+- `ElementsAre(...)` — Check container elements exactly, in order.
+- `UnorderedElementsAre(...)` — Check container elements exactly, any order.
+- `Contains(matcher)` — Container has at least one element matching the matcher.
+- `Each(matcher)` — All elements of the container satisfy the matcher.
+- `SizeIs(n)` — Container size matches matchers.
+
+### 4.4 Pointer and Object Matchers
+
+- `Pointee(matcher)` — The value pointed to by a pointer matches.
+- `Field(&Class::field, matcher)` — Matches object where a member field matches.
+- `Property(&Class::GetProperty, matcher)` — Matches object where a property getter method matches.
+
+### 4.5 Advanced Matchers
+
+- `Truly(predicate)` — Write a custom predicate function or functor to use as a matcher.
+- `MatcherCast<T>(m)` / `SafeMatcherCast<T>(m)` — Explicitly cast matchers to different types.
+
+### 4.6 Using Matchers in Asserts
+
+Use `EXPECT_THAT(value, matcher)` or `ASSERT_THAT(value, matcher)` to assert that `value` satisfies the matcher.
+
+### 4.7 Writing Custom Matchers
+
+You can define your own matchers using the `MATCHER` and `MATCHER_P*` macros to precisely express complex conditions.
+
+---
+
+## 5. Usage in Mock Expectations (GoogleMock)
+
+GoogleMock integrates matchers deeply to specify expected arguments in mock method calls.
+
+### 5.1 Setting Expectations
+
+Use `EXPECT_CALL(mock_object, Method(matchers...))` to set expectations on mock methods.
+
+### 5.2 Default vs Expected Behavior
+
+- `ON_CALL(mock_object, Method(matchers...)).WillByDefault(action)` sets default behavior without expectation of being called.
+- `EXPECT_CALL` both sets behavior and expects calls to happen.
+
+### 5.3 Specifying Argument Matchers
+
+You may specify precise or broad matchers for arguments to control how calls to mock methods are matched and verified.
+
+### 5.4 Specifying Call Cardinalities
+
+Control how many times a method is expected:
+- `Times(n)`, `AtLeast(n)`, `AnyNumber()`, `Between(m, n)`, etc.
+- Inferred based on `WillOnce` and `WillRepeatedly` if omitted.
+
+### 5.5 Controlling Call Order
+
+Using `InSequence` or the `.After()` clause, you can enforce calls to occur in specific sequences or partial orderings.
+
+### 5.6 Actions
+
+Within `WillOnce()` and `WillRepeatedly()`, specify what the mock method should do (e.g., return a value, invoke a callback).
 
 ---
 
 ## 6. Examples
 
-### Example 1: Using Matchers with EXPECT_THAT
+### 6.1 Simple Assertion
 
 ```cpp
-#include <gmock/gmock.h>
-using ::testing::StartsWith;
-using ::testing::MatchesRegex;
-using ::testing::AllOf;
-using ::testing::Gt;
-using ::testing::Lt;
-
-std::string value1 = "Hello, World!";
-std::string value2 = "Line 42";
-int value3 = 7;
-
-EXPECT_THAT(value1, StartsWith("Hello"));
-EXPECT_THAT(value2, MatchesRegex("Line \\d+"));
-ASSERT_THAT(value3, AllOf(Gt(5), Lt(10)));
-```
-
-If the first assertion fails, the failure message will say:
-```
-Value of: value1
-  Actual: "Hi, world!"
-Expected: starts with "Hello"
-```
-
-### Example 2: Using `.With()` Clause in EXPECT_CALL
-
-```cpp
-using ::testing::_;
-using ::testing::Lt;
-using ::testing::Return;
-
-EXPECT_CALL(my_mock, SetPosition(_, _))
-    .With(Lt())
-    .WillOnce(Return(true));
-```
-
-This expects `SetPosition` to be called with two arguments where the first is less than the second.
-
-### Example 3: Writing a Custom Matcher
-
-```cpp
-MATCHER(IsDivisibleBy7, "") {
-  return (arg % 7) == 0;
+TEST(FactorialTest, PositiveNos) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
 }
-
-EXPECT_CALL(mock, CheckNumber(IsDivisibleBy7()));
 ```
 
-If the matcher fails, it will print:
-```
-Value of: number
-Expected: is divisible by 7
-  Actual: 23 (the remainder is 2)
-```
-
-### Example 4: Combining Matchers
+### 6.2 Matcher with EXPECT_THAT
 
 ```cpp
-EXPECT_CALL(mock, ProcessNumber(AllOf(Gt(5), Ne(10))));
+using ::testing::StartsWith;
+
+std::string greeting = "Hello world";
+EXPECT_THAT(greeting, StartsWith("Hello"));
 ```
-Matches if the argument is greater than 5 and not equal to 10.
+
+### 6.3 Setting Expectations on a Mock Object
+
+```cpp
+using ::testing::Return;
+using ::testing::_;
+
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+};
+
+TEST(PaintTest, MovesForward) {
+  MockTurtle turtle;
+  EXPECT_CALL(turtle, PenUp());
+  EXPECT_CALL(turtle, Forward(100)).Times(1);
+
+  turtle.PenUp();
+  turtle.Forward(100);
+}
+```
+
+### 6.4 Using Compound Matchers
+
+```cpp
+EXPECT_THAT(value, AllOf(Gt(5), Lt(10)));
+```
 
 ---
 
-## 7. Troubleshooting & Tips
+## 7. Tips & Best Practices
 
-- **Unmatched calls:** If a mock function call fails because no expectation matched the arguments, review your matchers and expected sequences carefully.
-- **Too few or too many calls:** Adjust `.Times()` clauses. If unspecified, cardinality is inferred from `.WillOnce()` and `.WillRepeatedly()` clauses.
-- **Ambiguous matches:** Make sure your expectations are ordered correctly; the last matching expectation takes precedence.
-- **Uninteresting calls warnings:** Use `NiceMock` or specify `ON_CALL` for default actions instead of `EXPECT_CALL` just to suppress warnings.
-- **Matcher purity:** Matchers must be pure. Do not produce side effects in matcher code as execution count and timing is not guaranteed.
-- **Use verbosity flags:** Run tests with `--gmock_verbose=info` to get detailed matching and call tracing aiding in debugging failures.
-
----
-
-## 8. Next Steps & Related Content
-
-- Read the [Mocking Your First Method](https://google.github.io/googletest/guides/getting-started/mocking-your-first-method.html) guide to start writing mocks.
-- Explore the [Matchers Reference](reference/matchers-reference.md) for a full list of built-in matchers.
-- Learn about custom matchers in the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html#NewMatchers).
-- Review the [Assertions Reference](reference/assertions.md) for more assertion macros.
-- Understand managing expectations and call ordering with [`InSequence`, `After`, and cardinalities`](reference/mocking.md#EXPECT_CALL).
+- **Prefer Clear Intent Over Over-Specification:** Carefully choose matchers and cardinalities to avoid brittle tests.
+- **Use `_` as a Wildcard:** When argument values don't matter.
+- **Use `NiceMock` or `StrictMock` to Control Uninteresting Calls:** Suppress warnings or make uninteresting calls errors respectively.
+- **Use `RetiresOnSaturation()` in sequences:** To retire expectations after their cardinality is met, avoiding errors in ordered sequences.
+- **Write Custom Matchers for Reusable Complex Checks:** Use `MATCHER` macros for clarity.
+- **Avoid Overly Complex Expectations:** Break down expectations and verify incrementally.
 
 ---
 
-## 9. References
+## 8. Troubleshooting Common Issues
 
-- [GoogleTest Assertions Reference](reference/assertions.md)
-- [GoogleMock Mocking Reference](reference/mocking.md)
-- [GoogleMock Cheat Sheet](docs/gmock_cheat_sheet.md)
-- [GoogleMock Cookbook - Writing New Matchers](docs/gmock_cook_book.md#NewMatchers)
-- [Matchers Reference](reference/matchers-reference.md)
+- **Uninteresting Call Warnings:** Ignore or suppress with `NiceMock` when expected.
+- **Unexpected Calls:** Check if arguments mismatch matchers or call order violated sequences.
+- **Failed Cardinality:** Ensure your mock method is called the expected number of times.
+- **Matchers Not Matching:** Run tests with `--gmock_verbose=info` to trace call matches.
+- **Compile Errors Mocking Functions:** Confirm methods are `virtual` and `MOCK_METHOD` is used properly.
+
+---
+
+## 9. Next Steps & Related Documentation
+
+- Explore [Mocking Techniques and Patterns](../core-workflows/mocking-techniques-and-patterns) for better mock usage.
+- Deepen knowledge with [Matchers Reference](../../api-reference/mocking-api/matchers-reference).
+- Build robust expectations using [Actions & Cardinalities](../../api-reference/mocking-api/actions-and-cardinalities).
+- Review [Writing Your First Mock](../../guides/getting-started/writing-your-first-mock) and [Writing Your First Test](../../guides/getting-started/writing-your-first-test).
+- Use [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for recipes.
 
 ---
 
-## 10. Summary
-
-This guide equips you with the knowledge to harness GoogleTest’s assertion macros and GoogleMock’s matcher framework to build expressive and robust tests. By mastering built-in assertions, combining matchers, and defining custom matchers, you gain fine-grained control over test behavior verification and clearer failure diagnostics, driving more maintainable and effective test suites.
+For exhaustive reference and advanced techniques, consult the [Assertions Reference](../../api-reference/core-test-api/assertions-reference) and gMock documentation.
 
 ---
+
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "docs/reference/assertions.md", "range": "#"},{"path": "docs/gmock_cook_book.md", "range": "#"},{"path": "docs/reference/mocking.md", "range": "#"},{"path": "docs/gmock_cheat_sheet.md", "range": "#"}]} />
